--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -48,7 +48,7 @@ jobs:
           async function loginAndBrowse(loginUrl, browseUrl, username, password) {
             let browser, page;
             try {
-              // Launch maximized
+              // Launch and maximize
               browser = await puppeteer.launch({
                 headless: 'new',
                 defaultViewport: null,
@@ -57,7 +57,7 @@ jobs:
               page = await browser.newPage();
               await page.setViewport({ width: 1920, height: 1080 });
 
-              // 1. Login
+              // Stage 1: Login
               console.log("Navigating to login page:", loginUrl);
               await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_home_${Date.now()}.png`);
@@ -74,20 +74,20 @@ jobs:
               ]);
               await safeScreenshot(page, `screenshots/pubby_after_login_${Date.now()}.png`);
 
-              // 2. Verify login
+              // Stage 2: Verify login
               const dash = await page.$('a.logout, .dashboard');
               if (!dash) {
                 console.warn("Login may have failed.");
                 await safeScreenshot(page, `screenshots/pubby_login_failed_${Date.now()}.png`);
               }
 
-              // 3. Browse
+              // Stage 3: Browse page
               console.log("Navigating to browse page:", browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await sleep(10000);
               await safeScreenshot(page, `screenshots/pubby_browse_${Date.now()}.png`);
 
-              // 4. Filters
+              // Stage 4: Click Kindle Unlimited filter
               console.log("Clicking 'Kindle Unlimited' filter…");
               await page.evaluate(() => {
                 const tag = [...document.querySelectorAll('.browsing-tag')]
@@ -97,6 +97,7 @@ jobs:
               await sleep(5000);
               await safeScreenshot(page, `screenshots/pubby_kindle_unlimited_${Date.now()}.png`);
 
+              // Stage 5: Click Most Snaps filter
               console.log("Clicking 'Most Snaps' filter…");
               await page.evaluate(() => {
                 const tag = [...document.querySelectorAll('.browsing-tag')]
@@ -106,7 +107,8 @@ jobs:
               await sleep(5000);
               await safeScreenshot(page, `screenshots/pubby_most_snaps_${Date.now()}.png`);
 
-              // 5. Load books
+              // Stage 6: Load books
+              console.log("Waiting for books container…");
               await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_browse_loaded_${Date.now()}.png`);
               await sleep(5000);
@@ -117,71 +119,97 @@ jobs:
                 await safeScreenshot(page, `screenshots/pubby_scroll_${i+1}_${Date.now()}.png`);
               }
 
-              // 6. Extract titles & timeline
+              // Stage 7: Extract recommended titles
               console.log("Extracting Recommended Books…");
               const recommended = await page.evaluate(() =>
-                [...document.querySelectorAll('.library-books-container .card .title-text')].map(el => el.innerText.trim())
+                Array.from(document.querySelectorAll('.library-books-container .card .title-text'))
+                  .map(el => el.innerText.trim())
               );
               console.log("Recommended Books:", recommended);
               await safeScreenshot(page, `screenshots/pubby_books_extracted_${Date.now()}.png`);
 
+              // Stage 8: Extract timeline
               console.log("Extracting Activity Timeline…");
               const timeline = await page.evaluate(() =>
-                [...document.querySelectorAll('.timeline .event')].map(ev => ({
-                  content: ev.querySelector('.content')?.innerText.trim() || '',
-                  time: ev.querySelector('.time')?.innerText.trim() || ''
-                }))
+                Array.from(document.querySelectorAll('.timeline .event'))
+                  .map(ev => ({
+                    content: ev.querySelector('.content')?.innerText.trim() || '',
+                    time: ev.querySelector('.time')?.innerText.trim() || ''
+                  }))
               );
               console.log("Activity Timeline:", timeline);
               await safeScreenshot(page, `screenshots/pubby_activity_extracted_${Date.now()}.png`);
 
-              // 7. Pick KU book
+              // Stage 9: Pick a Kindle Unlimited book
               console.log("Scanning for Kindle Unlimited cards…");
-              const kuEls = await page.$$("//div[contains(@class,'card') and .//span[contains(@class,'verified-price') and normalize-space(text())='Kindle Unlimited']]");
-              if (kuEls.length) {
-                await kuEls[0].click();
-                await sleep(2000);
-                await safeScreenshot(page, `screenshots/pubby_ku_card_clicked_${Date.now()}.png`);
-                console.log("Clicking 'Pick Book'…");
-                const pickEls = await page.$$("//div[contains(@class,'action-blue') and normalize-space(text())='Pick Book']");
-                if (pickEls.length) {
-                  await pickEls[0].click();
-                  await sleep(2000);
-                  await safeScreenshot(page, `screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
+              const kuHandle = await page.evaluateHandle(xpath => {
+                const res = document.evaluate(
+                  xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null
+                );
+                return Array.from({ length: res.snapshotLength }, (_, i) => res.snapshotItem(i));
+              }, "//div[contains(@class,'card') and .//span[contains(@class,'verified-price') and normalize-space(text())='Kindle Unlimited']]");
+              const kuProps = await kuHandle.getProperties();
+              for (const prop of kuProps.values()) {
+                const el = prop.asElement();
+                if (el) {
+                  await el.click();
+                  break;
                 }
               }
+              await sleep(2000);
+              await safeScreenshot(page, `screenshots/pubby_ku_card_clicked_${Date.now()}.png`);
 
-              // 8. Reader
+              console.log("Clicking 'Pick Book'…");
+              const pickHandle = await page.evaluateHandle(xpath => {
+                const res = document.evaluate(
+                  xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null
+                );
+                return Array.from({ length: res.snapshotLength }, (_, i) => res.snapshotItem(i));
+              }, "//div[contains(@class,'action-blue') and normalize-space(text())='Pick Book']");
+              const pickProps = await pickHandle.getProperties();
+              for (const prop of pickProps.values()) {
+                const el = prop.asElement();
+                if (el) {
+                  await el.click();
+                  break;
+                }
+              }
+              await sleep(2000);
+              await safeScreenshot(page, `screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
+
+              // Stage 10: Activate Reader and click current page
               console.log("Clicking 'Reader' tab…");
               await page.evaluate(() => {
                 const tab = [...document.querySelectorAll('.section-container .section-label')]
                   .find(el => el.innerText.trim() === 'Reader');
                 if (tab) tab.click();
               });
-
               console.log("Waiting for current page label…");
               await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
-
               console.log("Clicking current page in Reader…");
-              await page.click('.section-container .pages-container .page-label.current-page');
-              await sleep(2000);
-              await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
+              const clickedReader = await page.evaluate(() => {
+                const curr = document.querySelector('.section-container .pages-container .page-label.current-page');
+                if (curr) { curr.click(); return true; }
+                return false;
+              });
+              if (!clickedReader) {
+                console.error("ERROR: Could not click current page in Reader");
+              } else {
+                await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
+              }
 
-              // 9. View On Amazon + follow
-              console.log("Waiting for 'View On Amazon' button…");
-              await page.waitForSelector('.action.copy-amazon-link', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_before_amazon_${Date.now()}.png`);
-
-              console.log("Clicking 'View On Amazon' and navigating…");
+              // Stage 11: Click 'View On Amazon' and navigate
+              console.log("Clicking 'View On Amazon' and waiting for navigation…");
               await Promise.all([
                 page.click('.action.copy-amazon-link'),
                 page.waitForNavigation({ waitUntil: 'networkidle2', timeout: 60000 })
               ]);
               await safeScreenshot(page, `screenshots/pubby_amazon_page_${Date.now()}.png`);
 
-              console.log("Amazon page HTML content:");
+              // Stage 12: Output Amazon page HTML
               const amazonHtml = await page.content();
+              console.log("Amazon page HTML:");
               console.log(amazonHtml);
 
             } catch (err) {
